--- a/animated-navigation/style.css
+++ b/animated-navigation/style.css
@@ -59,7 +59,7 @@ nav.active ul {
 /* Định nghĩa các thuộc tính cho li bên trong ul */
 nav ul li {
   transform: rotateY(0deg); /* Không xoay theo trục Y */
-  opacity: 0; /* Độ mờ ban đầu */
+  opacity: 0; /* Độ mờ ban đầu để ẩn chữ*/
   transition: transform 0.6s linear, opacity 0.6s linear; /* Hiệu ứng chuyển đổi xoay và độ mờ */
 }
 
