--- a/incrementing-counter/style.css
+++ b/incrementing-counter/style.css
@@ -1,31 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap");
 
-:root {
-  --background: #016a70;
-}
-
+/* Đặt box-sizing cho tất cả các phần tử để border và padding không ảnh hưởng đến kích thước phần tử */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
+/* Thiết lập hành vi cuộn mượt mà cho trang */
 html {
   scroll-behavior: smooth;
 }
 
+/* Thiết lập kiểu chữ mặc định cho trang, sắp xếp các phần tử trong body theo chiều ngang */
 body {
   font-family: "Roboto Mono", sans-serif;
   display: flex;
   width: 100vw;
   min-height: 100vh;
   padding: 2rem;
-  background-color: var(--background);
   background: url("./img/background.png") no-repeat center;
   background-size: cover;
   color: white;
 }
 
+/* Container chính của trang, sắp xếp các phần tử con theo chiều dọc và căn giữa */
 .container {
   display: flex;
   flex-direction: column;
@@ -34,14 +33,15 @@ body {
   width: 100%;
 }
 
+/* Thiết lập kiểu chữ và căn giữa cho tiêu đề */
 .title h1 {
-  font-size: 36px;
-  font-weight: 300;
+  font-size: 32px;
+  font-weight: bold;
   text-align: center;
 }
 
-
-.countersGroup {
+/* Thiết lập nhóm đếm, căn giữa và cho phép chúng cuộn khi cần thiết */
+.counter-group {
   max-width: 1000px;
   display: flex;
   flex-wrap: wrap;
@@ -49,7 +49,8 @@ body {
   justify-content: center;
 }
 
-.counterContainer {
+/* Container cho từng bộ đếm, sắp xếp các phần tử con theo chiều dọc, căn giữa và thêm các hiệu ứng trang trí */
+.counter-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -59,26 +60,32 @@ body {
   height: 280px;
   padding: 2rem;
   margin: 1rem;
-  border: 1px solid rgba(8, 94, 94, 0.25);
-  border-radius: 15px;
-  background-color: rgba(192, 220, 244, 0.4);
-  backdrop-filter: blur(2px);
+  border: 3px solid rgba(74, 220, 220, 0.25);
+  border-radius: 50%;
+  background-color: rgba(168, 207, 242, 0.4);
+  /* làm mờ */
+  backdrop-filter: blur(1px);  
 }
 
-.counterContainer .counter {
+/* Thiết lập kiểu chữ và kích thước cho số đếm */
+.counter-container .counter {
   font-size: 56px;
-  margin: 0.75rem auto 0 auto;
+  margin: 0 auto;
 }
 
+/* Thiết lập footer, sắp xếp các phần tử theo chiều ngang */
 footer {
   display: flex;
   padding-top: 3rem;
 }
 
+/* Thiết lập kiểu chữ và kích thước cho văn bản trong footer */
 footer p {
   font-weight: 300;
+  font-size: 14px;
 }
 
+/* Thiết lập kiểu dáng cho các liên kết */
 a,
 a:visited,
 a:active {
@@ -86,10 +93,12 @@ a:active {
   text-decoration: none;
 }
 
+/* Thêm gạch chân khi hover lên liên kết */
 a:hover {
   text-decoration: underline;
 }
 
+/* Thiết lập kiểu dáng cho màn hình nhỏ hơn 420px */
 @media (max-width: 420px) {
   #countersGroup {
     flex-direction: column;
