--- a/drink-water/style.css
+++ b/drink-water/style.css
@@ -10,22 +10,24 @@
 }
 
 body {
-  background-color: #3494e4;
+  background-color: #b5dcfb;
   color: #fff;
   font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 40px;
+  
 }
 
 h1 {
   margin: 10px 0 0;
+  color: #144fc6;
 }
 
 h3 {
   font-weight: 400;
   margin: 10px 0;
+  color: #144fc6;
 }
 
 .cup {
@@ -101,4 +103,14 @@ h3 {
 .text {
   text-align: center;
   margin: 0 0 5px;
+  color: #002879;
+}
+
+footer {
+ padding-top: 20px;;
+}
+
+footer p {
+  font-size: 14px;
+  color: black;
 }
